--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=LuytechZM
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://luytech.com
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=luytech_db
+DB_USERNAME=luut
+DB_PASSWORD=George.@123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -27,14 +27,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525  
+MAIL_USERNAME=f8bce05e6b6535
+MAIL_PASSWORD=7c4b21848a0bd0
+MAIL_ENCRYPTION=tls
+MAIL_FROM_NAME="${APP_NAME}" 
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
