--- a/.env.example
+++ b/.env.example
@@ -29,10 +29,10 @@ REDIS_PORT=6379
 
 
 MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525  
-MAIL_USERNAME=f8bce05e6b6535
-MAIL_PASSWORD=7c4b21848a0bd0
+MAIL_HOST=smtp.hostinger.com 
+MAIL_PORT=465  
+MAIL_USERNAME=admin@luytechzm.com
+MAIL_PASSWORD=Luytech.@123
 MAIL_ENCRYPTION=tls
 MAIL_FROM_NAME="${APP_NAME}" 
 
@@ -49,3 +49,24 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+
+
+Incoming server (IMAP)
+
+imap.hostinger.com 
+
+993
+
+Outgoing server (SMTP)
+
+
+
+
+
+Incoming server (POP)
+
+pop.hostinger.com 
+
+995
